--- a/src/components/VideoCard.css
+++ b/src/components/VideoCard.css
@@ -20,3 +20,11 @@
 .videoCard > h2 {
   padding: 10px;
 }
+
+.videoCard__stats {
+  display: none;
+}
+
+.videoCard:hover > .videoCard__stats {
+  display: inline;
+}
